<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2C30"
    tools:context=".InputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/data_film"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small_margin"
                    android:background="@color/cardview_light_background">

                    <EditText
                        android:id="@+id/edit_judul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/judul_film"
                        android:inputType="text" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small_margin"
                    android:background="@color/cardview_light_background">

                    <EditText
                        android:id="@+id/edit_tanggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/tgl_rilis"
                        android:inputType="date" />

                    <Button
                        android:id="@+id/btn_pilih_tanggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pilih_tgl" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small_margin">

                    <ImageView
                        android:id="@+id/iv_film"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_weight=" 1"
                        android:background="@color/cardview_light_background"
                        android:contentDescription="@string/gambar"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small_margin"
                    android:background="@color/cardview_light_background">

                    <EditText
                        android:id="@+id/edit_sutradara"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/sutradara"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edit_sinopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="210dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/sinopsis_film"
                        android:inputType="textPersonName" />
                </TableRow>

            </TableLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/simpan" />

    </LinearLayout>
</ScrollView>