<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    app:cardBackgroundColor="#454343"
    app:cardCornerRadius="@dimen/medium_margin"
    app:cardElevation="@dimen/small_margin"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_film"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:textAlignment="center"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_film"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_headline"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/sutradara"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sinopsis"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/sinopsis_film"
                android:textColor="@color/cardview_light_background" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>